# CW4---SKyPro

./: main.py  pyproject.toml
data/: vacancies.json
src/: api.py  connector.py  entities.py  user_interaction.py
tests/: test_vacanies.py
