[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vadim Meshcheryakov <painassasin@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tqdm = "^4.66.4"
pytest = "^8.2.2"
prettytable = "^3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
